@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor LOGIC_COLOR_T4
skinparam classBackgroundColor LOGIC_COLOR
left to right direction

package "Parser classes" {
    interface Parser
    class AddressBookParser
    class CommandRegistry
    class AddCommandParser
    class DeleteCommandParser
    class EditCommandParser
    class FindCommandParser
    class HelpCommandParser
    class ToggleCommandParser
    class UnlockCommandParser
    class ViewCommandParser
    class ArgumentTokenizer
    class ArgumentMultimap
    class ParserUtil
    class CliSyntax
    class Prefix
}

AddressBookParser --> CommandRegistry

AddCommandParser ..|> Parser
DeleteCommandParser ..|> Parser
EditCommandParser ..|> Parser
FindCommandParser ..|> Parser
HelpCommandParser ..|> Parser
ToggleCommandParser ..|> Parser
UnlockCommandParser ..|> Parser
ViewCommandParser ..|> Parser

CommandRegistry ..> AddCommandParser
CommandRegistry ..> DeleteCommandParser
CommandRegistry ..> EditCommandParser
CommandRegistry ..> FindCommandParser
CommandRegistry ..> HelpCommandParser
CommandRegistry ..> ToggleCommandParser
CommandRegistry ..> UnlockCommandParser
CommandRegistry ..> ViewCommandParser

AddCommandParser ..> ArgumentTokenizer
AddCommandParser ..> ArgumentMultimap
AddCommandParser ..> ParserUtil
AddCommandParser ..> CliSyntax

EditCommandParser ..> ArgumentTokenizer
EditCommandParser ..> ArgumentMultimap
EditCommandParser ..> ParserUtil
EditCommandParser ..> CliSyntax

DeleteCommandParser ..> ParserUtil
ToggleCommandParser ..> ParserUtil
ViewCommandParser ..> ParserUtil

ArgumentTokenizer --> ArgumentMultimap
ArgumentTokenizer ..> Prefix
CliSyntax ..> Prefix
ParserUtil ..> Prefix

note right of CommandRegistry
  AddressBookParser delegates
  mode-aware command routing
  to CommandRegistry.

  CommandRegistry delegates to:
  AddCommandParser, DeleteCommandParser,
  EditCommandParser, FindCommandParser,
  HelpCommandParser, ToggleCommandParser,
  UnlockCommandParser, and ViewCommandParser.

  It also creates ClearCommand,
  ExitCommand, ListCommand,
  LockCommand, and SetupCommand directly.
end note
@enduml
